Validando Forms btm salvar.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "nyc": "^15.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
