--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nyc": "^15.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.4.1",
     "validator": "^13.0.0"
   },
